# nuclides

./: Cargo.toml  LICENSE  README.md  build.rs
data/: ground_states_all_nuclides.csv  periodic_table.csv
src/: lib.rs
