[package]
name = "nuclides"
version = "0.0.0"
edition = "2021"
authors = ["Luca Lewin <contact@lucalewin.dev>"]
description = "physical properties of all known nuclides"
license = "BSD-2-Clause-Patent"
homepage = "https://lucalewin.dev/projects/nuclides"
documentation = "https://lucalewin.dev/docs/nuclides"
repository = "https://github.com/lucalewin/nuclides"

[dependencies]

[build-dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
